# foursight-cgap

./: .coveragerc  .gitignore  .travis.yml  CHANGELOG.rst  Makefile  README.rst  app.py  buckets.py  conftest.py  deploy.py  lifecycle_test.py  md5_test.py  package.py  pyproject.toml  queues.py  requirements.txt
.chalice/: config.json  deployed.json  policy-prod.json
.github/workflows/: main-CI.yml  main-deploy-docs.yml  main-deploy.yml  main-publish.yml  main.yml
chalicelib/: app.py  app_utils.py  buckets.py  check_setup.json  check_setup_backup.json  check_utils.py  config.py  decorators.py  environment.py  fs_connection.py  package.py  run_result.py  sqs_utils.py  stage.py  utils.py  vars.py
chalicelib/checks/: audit_checks.py  deployment_checks.py  ecs_checks.py  es_checks.py  lifecycle_checks.py  system_checks.py  test_checks.py  wfr_cgap_checks.py  wfr_checks.py  wrangler_checks.py
chalicelib/checks/helpers/: clone_utils.py  confchecks.py  constants.py  lifecycle_utils.py  sys_utils.py  utils.py  wfr_utils.py  wfrset_utils.py  wrangler_utils.py
chalicelib/templates/: base.html
chalicelib_cgap/: app.py  app_utils.py  app_utils_schedules.py  buckets.py  check_schedules.py  check_setup.json  deploy.py  package.py  vars.py
chalicelib_cgap/checks/: core_checks.py  deployment_checks.py  ecs_checks.py  es_checks.py  lifecycle_checks.py  system_checks.py  wfr_checks.py  wrangler_checks.py
chalicelib_cgap/checks/helpers/: lifecycle_utils.py  linecount_dicts.py  wfrset_utils.py
chalicelib_cgap/scripts/: local_check_execution.py  local_check_runner.py
chalicelib_obsolete/: app.py  app_utils.py
chalicelib_obsolete/checks/: audit_checks.py
chalicelib_obsolete/checks/helpers/: clone_utils.py
docs/: cgap_adding_workflow.md
docs/source/: check_modules.rst  conf.py  environments.rst  index.rst  modules.rst
scripts/: migration.py  test_check.py
tests/: test_action_result.py  test_app_routes.py  test_app_utils.py  test_check_result.py  test_check_runner.py  test_check_utils.py  test_environment.py  test_es_connection.py  test_fs_connection.py  test_run_result.py  test_s3_connection.py  test_utils.py
tests/checks/: lifecycle_testdata.json  minimal_metadata.json  test_lifecycle_checks.py  test_wfr_checks.py
tests/checks/helpers/: test_wfr_utils.py
