[tool.poetry]
name = "foursight-cgap"
version = "3.5.0.2b9"
description = "Serverless Chalice Application for Monitoring"
authors = ["4DN-DCIC Team <support@4dnucleome.org>"]
license = "MIT"
packages = [
  { include = "chalicelib_cgap" }
]

[tool.poetry.dependencies]
# Cannot go to Python 3.8 because cgap-pipeilne is stuck on Python 3.7.
python = ">=3.7.1,<3.8"
#dcicutils = "^7.5.1"
dcicutils = "7.6.0.1b4"
click = "^7.1.2"
PyJWT = "^2.5.0"
Jinja2 = "2.10.1"
google-api-python-client = "^1.12.5"
geocoder = "1.38.1"
elasticsearch = "^7.13.4"
elasticsearch-dsl = "^7.0.0"
gitpython = "^3.1.2"
pytz = "^2020.1"
magma-suite = "^1.2.2"
tibanna-ff = "^1.3.0"
MarkupSafe = "1.1.1"
#foursight-core = "4.3.0.2b6"
foursight-core = "4.3.0.1b54"
# use below for tests but not for deployment
#foursight-core = { git = "https://github.com/4dn-dcic/foursight-core.git", branch="core2" }
cgap-pipeline-utils = "23.0"
pytest = "5.1.2"

[tool.poetry.dev-dependencies]
chalice = "^1.21.6"
pytest-cov = "2.7.1"
flaky = "3.6.1"

[tool.poetry.scripts]
publish-to-pypi = "dcicutils.scripts.publish_to_pypi:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
