[tool.poetry]
name = "foursight-cgap"
version = "3.6.0.1b2"  # TODO: To become 3.6.1
description = "Serverless Chalice Application for Monitoring"
authors = ["4DN-DCIC Team <support@4dnucleome.org>"]
license = "MIT"
packages = [
  { include = "chalicelib_cgap" }
]

[tool.poetry.dependencies]
# Cannot go to Python 3.8 because cgap-pipeilne is stuck on Python 3.7.
python = ">=3.7.1,<3.8"
click = "^7.1.2"
dcicutils = "7.6.0.1b4"
cgap-pipeline-utils = "23.0"
elasticsearch = "^7.13.4"
elasticsearch-dsl = "^7.0.0"
# use below for tests but not for deployment
#foursight-core = { git = "https://github.com/4dn-dcic/foursight-core.git", branch="core2" }
foursight-core = "4.4.0.1b2"
geocoder = "1.38.1"
gitpython = "^3.1.2"
google-api-python-client = "^1.12.5"
google-auth = "^2.22.0"
Jinja2 = "2.10.1"
magma-suite = "^1.2.2"
tibanna-ff = "^1.3.0"
MarkupSafe = "1.1.1"
PyJWT = "^2.5.0"
pytest = "5.1.2"
pytz = "^2020.1"

[tool.poetry.dev-dependencies]
chalice = "^1.26.0"
flaky = "3.6.1"
pytest-cov = "2.7.1"

[tool.poetry.scripts]
local-check-execution = "chalicelib_cgap.scripts.local_check_execution:main"
publish-to-pypi = "dcicutils.scripts.publish_to_pypi:main"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
